# ProxyVis

./: .zenodo.json  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: ahi_example.py
proxy_vis/: channel_to_arg_maps.py  combine_dn_pvis.py  daytime_pvis.py  nighttime_pvis_main_one_eq.py  nighttime_pvis_main_two_eq.py  nighttime_pvis_simple_one_eq.py  nighttime_pvis_simple_two_eq.py  norm_pvis.py  regrid_utils.py  saved_pvis_min_max.py  solar_zenith_angle.py
unit_tests/: test_nighttime_pvis_equations.py
